# wyn

./: .gitattributes  .gitignore  BLOCK_STMT_SCOPING.md  CLAUDE.md  Cargo.toml  DEPLOY.md  ELIMINATE_MIR_PLAN.md  FUTURE.md  GLSL-PORTING.md  GRAMMAR.txt  INTERPROCEDURAL_SOAC.md  LINKED_SPIRV.md  LOOP_UNROLL_WIP.md  MIR-2.0.md  OPT.md  PLAN_gather_materialize.md  README.md  REFACTOR_NOTES.md  SOA_STATUS.md  SPECIFICATION.md  SPIR-V-POINTER-BUG.md  SSA_INLINE_WIP.md  STORAGE_VIEW_REFACTOR.md  WIP-NOTES.md  WIP-prelude-polymorphism.md  WIP-tlc-fixes.md  WIP-validation-fixes.md  WIP.md  WIP_ARRAY_UNIFICATION.md  WIP_STATUS.md  blog.txt  rustfmt.toml
extra/spirv-validator/: Cargo.toml
extra/spirv-validator/src/: main.rs
extra/tree-sitter-wyn/bindings/rust/: Cargo.toml  build.rs  lib.rs
extra/treereduce-wyn/: Cargo.toml  interesting.sh
extra/treereduce-wyn/src/: main.rs
extra/viz/: Cargo.toml  README.md  complete_final.spv  complete_shader_example.spv
extra/viz/src/: app.rs  gpu.rs  json.rs  main.rs  specs.rs  spirv.rs
extra/viz/src/app/: mod.rs  render.rs  uniforms.rs  vertex_buffers.rs
extra/viz/src/modes/: compute.rs  info.rs  miner.rs  mod.rs  pipeline.rs  simulate.rs  testpattern.rs  validate.rs  vf.rs
extra/wyn-doc/: Cargo.toml  example.wyn
extra/wyn-doc/src/: main.rs
playground/wyn-wasm/: Cargo.toml
playground/wyn-wasm/src/: lib.rs  lib_tests.rs
wyn/: Cargo.toml
wyn-core/: Cargo.toml
wyn-core/examples/: soac_analysis_demo.rs  tlc_demo.rs
wyn-core/src/: alias_checker.rs  alias_checker_tests.rs  ast.rs  ast_const_fold.rs  ast_const_fold_tests.rs  ast_renumber.rs  ast_to_sir.rs  binding_layout.rs  binding_lifter.rs  binding_lifter_tests.rs  canonicalize_vars.rs  constant_folding.rs  constant_folding_tests.rs  default_address_spaces.rs  defun_analysis.rs  desugar.rs  desugar_tests.rs  diags.rs  dps_transform.rs  dyn_pipeline.rs  dyn_pipeline_tests.rs  error.rs  flattening.rs  flattening_tests.rs  flow.rs  impl_source.rs  inplace_rewriter.rs  integration_tests.rs  interface.rs  intrinsics.rs  lexer.rs  lib.rs  lowering_common.rs  materialize_hoisting.rs  mir_transform_tests.rs  monomorphization.rs  monomorphization_tests.rs  name_registry.rs  name_resolution.rs  normalize.rs  (+29 more)
wyn-core/src/builtins/: catalog.rs  defs.rs  lowering.rs  mod.rs  mod_tests.rs  names.rs  overload.rs  scheme.rs
wyn-core/src/egir/: assign_outputs.rs  assign_outputs_tests.rs  builder.rs  builder_tests.rs  canonicalize.rs  domtree.rs  domtree_tests.rs  elaborate.rs  entry_points.rs  extract.rs  fold.rs  fold_tests.rs  from_tlc.rs  from_tlc_tests.rs  graph_ops.rs  graph_ops_tests.rs  graph_projector.rs  graph_projector_tests.rs  in_place.rs  inlining.rs  inlining_tests.rs  ir.rs  loop_analysis.rs  materialize.rs  mod.rs  multi_consumer.rs  parallelize.rs  parallelize_tests.rs  partial_inline.rs  partial_inline_tests.rs  pipeline.rs  pipeline_seed.rs  program.rs  program_tests.rs  publish.rs  reify.rs  residency.rs  residency_cost.rs  residency_cost_tests.rs  residency_tests.rs  (+26 more)
wyn-core/src/egir/fusion/: envelope.rs  filter.rs  horizontal.rs  indexed.rs  legality.rs  legality_tests.rs  mod.rs  space.rs  space_tests.rs  vertical.rs
wyn-core/src/egir/parallelize/: chunk.rs  error.rs  facts.rs  filter.rs  filter_recipe.rs  kernel.rs  materialization.rs  mod.rs  model.rs  planning.rs  planning_tests.rs  policy.rs  prefix_scan.rs  prepare.rs  projection.rs  recognize.rs  reduce.rs  scan.rs  schedule.rs  schedule_tests.rs  schedule_validation.rs  target.rs  test_support.rs  tests.rs
wyn-core/src/egir/realize_outputs/: dispatch.rs  dispatch_tests.rs  (+3 more)
wyn-core/src/glsl/: lowering.rs  mod.rs  ssa_lowering.rs  ssa_lowering_tests.rs  structured.rs
wyn-core/src/lexer/: literal.rs  literal_tests.rs  mod.rs  tests.rs
wyn-core/src/mir/: binding_allocator.rs  folder.rs  layout.rs  mod.rs  parallelism.rs  reachability.rs  soa_helpers.rs  soac_analysis.rs  ssa.rs  ssa_builder.rs  ssa_builder_tests.rs  ssa_merge.rs  ssa_opt.rs  ssa_parallelize.rs  ssa_print.rs  ssa_soac_analysis.rs  ssa_soac_lower.rs  ssa_tests.rs  ssa_verify.rs  ssa_verify_tests.rs  tests.rs  to_ssa.rs  transform.rs
wyn-core/src/module_manager/: mod.rs  tests.rs
wyn-core/src/parallelization/: mod.rs  strategies.rs
wyn-core/src/parser/: module.rs  pattern.rs  tests.rs
wyn-core/src/sir/: builder.rs  fusion.rs  mod.rs  parallelize.rs  types.rs
wyn-core/src/spirv/: builder.rs  builder_tests.rs  entry.rs  lower.rs  lower_builtin.rs  lower_index.rs  lower_ops.rs  lowering.rs  lowering_tests.rs  materialize.rs  mod.rs  pow.rs  ssa_lowering.rs  storage.rs  types_lowering.rs  verify_buffer_layouts.rs  verify_buffer_layouts_tests.rs
wyn-core/src/ssa/: builder.rs  builder_tests.rs  layout.rs  layout_tests.rs  merge.rs  mod.rs  opt.rs  print.rs  reachability.rs  soa_helpers.rs  soac_analysis.rs  soac_analysis_tests.rs  soac_lower.rs  ssa_inline.rs  storage_function_variants.rs  tests.rs  types.rs  verify.rs  verify_tests.rs
wyn-core/src/tlc/: anf.rs  anf_tests.rs  array_semantics.rs  buffer_specialize.rs  buffer_specialize_tests.rs  closure_calls_lower.rs  closure_calls_lower_tests.rs  closure_convert.rs  closure_convert_tests.rs  closure_pipeline_tests.rs  data.rs  dce.rs  defaults.rs  defunctionalize.rs  defunctionalize_tests.rs  from_ast.rs  fusion.rs  fusion_summary.rs  fusion_tests.rs  hof_specialize.rs  hof_specialize_tests.rs  if_over_producer.rs  inline.rs  input_slice_bounds.rs  input_slice_bounds_tests.rs  lift.rs  lift_gathers.rs  lift_gathers_tests.rs  materialize_entry_soacs.rs  materialize_entry_soacs_tests.rs  mod.rs  mod_tests.rs  monomorphize.rs  monomorphize_tests.rs  normalize.rs  normalize_outputs.rs  normalize_outputs_tests.rs  normalize_soacs.rs  normalize_tests.rs  ownership.rs  (+35 more)
wyn-core/src/types/: checker.rs  checker_tests.rs  mod.rs  run.rs  schema_validation.rs
wyn-core/src/wgsl/: mod.rs  ssa_lowering.rs  ssa_lowering_tests.rs
wyn-pipeline-descriptor/: Cargo.toml
wyn-pipeline-descriptor/src/: lib.rs
wyn-spirv/: Cargo.toml
wyn-spirv/src/: lib.rs  lib_tests.rs
wyn/src/: main.rs
(+342 files in other folders)
