[workspace]
members = ["wyn-core", "wyn", "wyn-analyzer"]
resolver = "2"
exclude = ["extra"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wyn Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
nom = "7.1"
polytype = "7.0"
spirv = "0.3"
log = "0.4"
env_logger = "0.11"
