[workspace]
members = ["wyn-core", "wyn", "wyn-analyzer", "wyn-pipeline-descriptor", "wyn-spirv"]
resolver = "2"
# wyn-wasm is built only for wasm32 via `wasm-pack`, never the host target the
# rest of the workspace compiles for, and it carries its own size-tuned
# release profile — so it stays out of the workspace with its own lockfile.
exclude = ["extra", "wyn-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wyn Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
nom = "7.1"
polytype = "7.0"
spirv = "0.3"
log = "0.4"
env_logger = "0.11"

[profile.test]
opt-level = 1

[profile.release]
debug = "line-tables-only"

# Sampling-profiler build: release optimizations + full debuginfo so
# samply / cargo-flamegraph / VTune can resolve function names and
# inlined frames. Build with `cargo build --profile profiling --bin wyn`.
[profile.profiling]
inherits = "release"
debug = true
strip = false
