[package]
name = "wyn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
nom.workspace = true
polytype.workspace = true
spirv.workspace = true
log.workspace = true
slotmap = "1.0"
smallvec = "1.13"
itertools = "0.14.0"
indexmap = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wyn-pipeline-descriptor = { path = "../wyn-pipeline-descriptor" }
wyn-graph = { path = "../wyn-graph" }
wspirv = { package = "wyn-spirv", path = "../wyn-spirv" }

[dev-dependencies]
env_logger.workspace = true
# Used for in-process WGSL and SPIR-V validation in backend tests.
naga = { version = "26.0", features = ["wgsl-in", "spv-in"] }
anyhow = "1.0"
