[package]
name = "spirv-validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spirv-validator"
path = "src/main.rs"

[dependencies]
wgpu = { version = "29.0.3", features = ["dx12", "spirv"] }
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }