[package]
name = "viz"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
# Enable DirectX 12 on Windows and SPIR-V input
wgpu = { version = "26.0.1", features = ["dx12", "spirv"] }
pollster = "0.3"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
rspirv = "0.12"
