[package]
name = "viz"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
# Enable DirectX 12 on Windows and SPIR-V input
wgpu = { version = "26.0.1", features = ["dx12", "spirv"] }
# naga (pinned to wgpu's transitive version) for headless WGSL
# parse+validate in the `validate` subcommand.
naga = { version = "26.0", features = ["wgsl-in"] }
pollster = "0.3"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
rspirv = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# PNG/JPG decoding for file-backed `#[texture]` bindings (`--texture NAME:FILE`).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
wyn-pipeline-descriptor = { path = "../../wyn-pipeline-descriptor" }
