[package]
name = "viz"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
# Enable DirectX 12 on Windows and SPIR-V input
wgpu = { version = "27", features = ["dx12", "spirv"] }
# naga (pinned to wgpu's transitive version) for headless WGSL
# parse+validate in the `validate` subcommand. `termcolor` keeps
# `ShaderError`'s `Display` impl compiling — without it, naga's
# `DiagnosticBufferInner` defaults to `String`, which doesn't
# implement `termcolor::WriteColor`.
naga = { version = "27.0", features = ["wgsl-in", "termcolor"] }
pollster = "0.3"
# Decoding for `--image NAME:FILE` host-uploaded textures.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
rspirv = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wyn-pipeline-descriptor = { path = "../../wyn-pipeline-descriptor" }
