[package]
name = "wyn-doc"
description = "Extract `-- |` doc comments from Wyn source into Markdown for mdBook publishing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "wyn-doc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
